@@ -9,6 +9,7 @@
 package org.sosy_lab.java_smt.example;
 
 import com.google.common.base.Preconditions;
+import com.google.common.collect.ImmutableList;
 import java.io.IOException;
 import java.math.BigInteger;
 import java.nio.charset.Charset;
@@ -41,7 +42,7 @@ import org.sosy_lab.java_smt.api.SolverException;
  *
  * <ul>
  *   <li>In each column or row there are as many 'X's as 'O's.
- *   <li>Three aligned cells must not contains an identical value.
+ *   <li>Three aligned cells must not contain an identical value.
  * </ul>
  *
  * <p>The Binoxxo is read from StdIn and should be formatted as the following example:
@@ -59,7 +60,7 @@ import org.sosy_lab.java_smt.api.SolverException;
  * X..X..O..O
  * </pre>
  *
- * <p>A empty newline will terminate the input and start the solving process.
+ * <p>An empty newline will terminate the input and start the solving process.
  *
  * <p>The solution will then be printed on StdOut, just like the following solution:
  *
@@ -95,7 +96,7 @@ public final class Binoxxo {
           SolverContextFactory.createSolverContext(config, logger, notifier, solver)) {
 
         for (BinoxxoSolver<?> binoxxo :
-            List.of(
+            ImmutableList.of(
                 new IntegerBasedBinoxxoSolver(context), new BooleanBasedBinoxxoSolver(context))) {
           long start = System.currentTimeMillis();
 
@@ -136,9 +137,11 @@ public final class Binoxxo {
     @SuppressWarnings("resource") // closing Scanner will close StdIn, and we do not want this
     Scanner scanner = new Scanner(System.in, Charset.defaultCharset());
     System.out.println(
-        "Please insert a square for Binxxo.\n"
-            + "Use 'X', 'O' as values any any other char as missing value.\n"
-            + "Use an empty line to terminate your input.");
+        """
+        Please insert a square for Binxxo.
+        Use 'X', 'O' as values any any other char as missing value.
+        Use an empty line to terminate your input.
+        """);
 
     // read all input
     String line = scanner.nextLine();
@@ -300,7 +303,7 @@ public final class Binoxxo {
       for (int row = 0; row < size; row++) {
         for (int col = 0; col < size - 2; col++) {
           List<IntegerFormula> lst =
-              List.of(symbols[row][col], symbols[row][col + 1], symbols[row][col + 2]);
+              ImmutableList.of(symbols[row][col], symbols[row][col + 1], symbols[row][col + 2]);
           IntegerFormula sum = imgr.sum(lst);
           rules.add(bmgr.or(imgr.equal(one, sum), imgr.equal(two, sum)));
         }
@@ -310,7 +313,7 @@ public final class Binoxxo {
       for (int col = 0; col < size; col++) {
         for (int row = 0; row < size - 2; row++) {
           List<IntegerFormula> lst =
-              List.of(symbols[row][col], symbols[row + 1][col], symbols[row + 2][col]);
+              ImmutableList.of(symbols[row][col], symbols[row + 1][col], symbols[row + 2][col]);
           IntegerFormula sum = imgr.sum(lst);
           rules.add(bmgr.or(imgr.equal(one, sum), imgr.equal(two, sum)));
         }
@@ -398,7 +401,7 @@ public final class Binoxxo {
       for (int row = 0; row < size; row++) {
         for (int col = 0; col < size - 2; col++) {
           List<BooleanFormula> lst =
-              List.of(symbols[row][col], symbols[row][col + 1], symbols[row][col + 2]);
+              ImmutableList.of(symbols[row][col], symbols[row][col + 1], symbols[row][col + 2]);
           rules.add(bmgr.not(bmgr.and(lst)));
           rules.add(bmgr.or(lst));
         }
@@ -408,7 +411,7 @@ public final class Binoxxo {
       for (int col = 0; col < size; col++) {
         for (int row = 0; row < size - 2; row++) {
           List<BooleanFormula> lst =
-              List.of(symbols[row][col], symbols[row + 1][col], symbols[row + 2][col]);
+              ImmutableList.of(symbols[row][col], symbols[row + 1][col], symbols[row + 2][col]);
           rules.add(bmgr.not(bmgr.and(lst)));
           rules.add(bmgr.or(lst));
         }
