@@ -9,7 +9,9 @@
 package org.sosy_lab.java_smt.solvers.cvc5;
 
 import static com.google.common.base.Preconditions.checkArgument;
+import static com.google.common.base.Preconditions.checkNotNull;
 import static com.google.common.base.Preconditions.checkState;
+import static org.sosy_lab.java_smt.api.FormulaType.getFloatingPointTypeFromSizesWithHiddenBit;
 
 import com.google.common.base.Preconditions;
 import com.google.common.base.Splitter;
@@ -30,12 +32,16 @@ import io.github.cvc5.Pair;
 import io.github.cvc5.Solver;
 import io.github.cvc5.Sort;
 import io.github.cvc5.Term;
-import java.lang.reflect.Array;
+import io.github.cvc5.TermManager;
 import java.math.BigInteger;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Deque;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.sosy_lab.common.rationals.Rational;
 import org.sosy_lab.java_smt.api.ArrayFormula;
@@ -44,17 +50,22 @@ import org.sosy_lab.java_smt.api.BooleanFormula;
 import org.sosy_lab.java_smt.api.EnumerationFormula;
 import org.sosy_lab.java_smt.api.FloatingPointFormula;
 import org.sosy_lab.java_smt.api.FloatingPointNumber;
+import org.sosy_lab.java_smt.api.FloatingPointRoundingMode;
+import org.sosy_lab.java_smt.api.FloatingPointRoundingModeFormula;
 import org.sosy_lab.java_smt.api.Formula;
 import org.sosy_lab.java_smt.api.FormulaType;
 import org.sosy_lab.java_smt.api.FormulaType.ArrayFormulaType;
 import org.sosy_lab.java_smt.api.FormulaType.FloatingPointType;
+import org.sosy_lab.java_smt.api.FunctionDeclaration;
 import org.sosy_lab.java_smt.api.FunctionDeclarationKind;
 import org.sosy_lab.java_smt.api.QuantifiedFormulaManager.Quantifier;
 import org.sosy_lab.java_smt.api.RegexFormula;
 import org.sosy_lab.java_smt.api.StringFormula;
 import org.sosy_lab.java_smt.api.visitors.FormulaVisitor;
+import org.sosy_lab.java_smt.api.visitors.TraversalProcess;
 import org.sosy_lab.java_smt.basicimpl.FormulaCreator;
 import org.sosy_lab.java_smt.basicimpl.FunctionDeclarationImpl;
+import org.sosy_lab.java_smt.basicimpl.Tokenizer;
 import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5ArrayFormula;
 import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5BitvectorFormula;
 import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5BooleanFormula;
@@ -66,7 +77,7 @@ import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5RationalFormula;
 import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5RegexFormula;
 import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5StringFormula;
 
-public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term> {
+class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, Term> {
 
   /** CVC5 does not allow using some key-functions from SMTLIB2 as identifiers. */
   private static final ImmutableSet<String> UNSUPPORTED_IDENTIFIERS = ImmutableSet.of("let");
@@ -76,19 +87,26 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
 
   // <Name, Sort.toString, Term> because CVC5 returns distinct pointers for types, while the
   // String representation is equal (and they are equal)
-  private final Table<String, String, Term> variablesCache = HashBasedTable.create();
-  private final Map<String, Term> functionsCache = new HashMap<>();
+  protected final Table<String, String, Term> variablesCache = HashBasedTable.create();
+  protected final Map<String, Term> functionsCache = new HashMap<>();
+
+  private final TermManager termManager;
   private final Solver solver;
 
-  protected CVC5FormulaCreator(Solver pSolver) {
+  protected CVC5FormulaCreator(TermManager pTermManager, Solver pSolver) {
     super(
-        pSolver,
-        pSolver.getBooleanSort(),
-        pSolver.getIntegerSort(),
-        pSolver.getRealSort(),
-        pSolver.getStringSort(),
-        pSolver.getRegExpSort());
+        pTermManager,
+        pTermManager.getBooleanSort(),
+        pTermManager.getIntegerSort(),
+        pTermManager.getRealSort(),
+        pTermManager.getStringSort(),
+        pTermManager.getRegExpSort());
+    termManager = pTermManager;
     solver = pSolver;
+  }
+
+  public Solver getSolver() {
+    return solver;
   }
 
   @Override
@@ -97,26 +115,13 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
     if (existingVar != null) {
       return existingVar;
     }
-    if (variablesCache.containsRow(name)) {
-      throw new IllegalArgumentException(
-          "Symbol "
-              + name
-              + " requested with type "
-              + sort
-              + ", but "
-              + "already "
-              + "used "
-              + "with "
-              + "type "
-              + variablesCache
-                  .rowMap()
-                  .get(name)
-                  .entrySet()
-                  .toArray((java.util.Map.Entry[]) Array.newInstance(java.util.Map.Entry.class, 0))[
-                  0]
-                  .getKey());
-    }
-    Term newVar = solver.mkConst(sort, name);
+    checkArgument(
+        !variablesCache.containsRow(name),
+        "Symbol %s requested with type %s, but already used with type %s",
+        name,
+        sort,
+        variablesCache.row(name).keySet());
+    Term newVar = termManager.mkConst(sort, name);
     variablesCache.put(name, sort.toString(), newVar);
     return newVar;
   }
@@ -131,14 +136,14 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
   public Term makeBoundCopy(Term var) {
     Sort sort = var.getSort();
     String name = getName(var);
-    Term boundCopy = solver.mkVar(sort, name);
+    Term boundCopy = termManager.mkVar(sort, name);
     return boundCopy;
   }
 
   @Override
   public Sort getBitvectorType(int pBitwidth) {
     try {
-      return solver.mkBitVectorSort(pBitwidth);
+      return termManager.mkBitVectorSort(pBitwidth);
     } catch (CVC5ApiException e) {
       throw new IllegalArgumentException(
           "Cannot create bitvector sort with size " + pBitwidth + ".", e);
@@ -148,22 +153,23 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
   @Override
   public Sort getFloatingPointType(FloatingPointType pType) {
     try {
-      // plus sign bit
-      return solver.mkFloatingPointSort(pType.getExponentSize(), pType.getMantissaSize() + 1);
+      // plus hidden bit
+      return termManager.mkFloatingPointSort(
+          pType.getExponentSize(), pType.getMantissaSizeWithHiddenBit());
     } catch (CVC5ApiException e) {
       throw new IllegalArgumentException(
           "Cannot create floatingpoint sort with exponent size "
               + pType.getExponentSize()
               + " and mantissa "
-              + pType.getMantissaSize()
-              + " (plus sign bit).",
+              + pType.getMantissaSizeWithHiddenBit()
+              + " (including hidden bit).",
           e);
     }
   }
 
   @Override
   public Sort getArrayType(Sort pIndexType, Sort pElementType) {
-    return solver.mkArraySort(pIndexType, pElementType);
+    return termManager.mkArraySort(pIndexType, pElementType);
   }
 
   @Override
@@ -229,9 +235,9 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
     } else if (sort.isBitVector()) {
       return FormulaType.getBitvectorTypeWithSize(sort.getBitVectorSize());
     } else if (sort.isFloatingPoint()) {
-      // CVC5 wants the sign bit as part of the mantissa. We add that manually in creation.
-      return FormulaType.getFloatingPointType(
-          sort.getFloatingPointExponentSize(), sort.getFloatingPointSignificandSize() - 1);
+      // CVC5 wants the hidden bit as part of the mantissa. We add that manually in creation.
+      return getFloatingPointTypeFromSizesWithHiddenBit(
+          sort.getFloatingPointExponentSize(), sort.getFloatingPointSignificandSize());
     } else if (sort.isRoundingMode()) {
       return FormulaType.FloatingPointRoundingModeType;
     } else if (sort.isReal()) {
@@ -256,7 +262,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
     } else {
       try {
         throw new AssertionError(
-            String.format("Encountered unhandled Type '%s' %s.", sort, sort.getKind()));
+            "Encountered unhandled Type '%s' %s.".formatted(sort, sort.getKind()));
       } catch (CVC5ApiException exception) {
         throw new AssertionError("Unexpected error when accessing sort.", exception);
       }
@@ -269,8 +275,8 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
     assert pType.equals(getFormulaType(pTerm))
             || (pType.equals(FormulaType.RationalType)
                 && getFormulaType(pTerm).equals(FormulaType.IntegerType))
-        : String.format(
-            "Cannot encapsulate formula %s of Type %s as %s", pTerm, getFormulaType(pTerm), pType);
+        : "Cannot encapsulate formula %s of Type %s as %s"
+            .formatted(pTerm, getFormulaType(pTerm), pType);
     if (pType.isBooleanType()) {
       return (T) new CVC5BooleanFormula(pTerm);
     } else if (pType.isIntegerType()) {
@@ -303,23 +309,30 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
   @Override
   public BooleanFormula encapsulateBoolean(Term pTerm) {
     assert getFormulaType(pTerm).isBooleanType()
-        : String.format(
-            "%s is not boolean, but %s (%s)", pTerm, pTerm.getSort(), getFormulaType(pTerm));
+        : "%s is not boolean, but %s (%s)".formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
     return new CVC5BooleanFormula(pTerm);
   }
 
   @Override
   public BitvectorFormula encapsulateBitvector(Term pTerm) {
     assert getFormulaType(pTerm).isBitvectorType()
-        : String.format("%s is no BV, but %s (%s)", pTerm, pTerm.getSort(), getFormulaType(pTerm));
+        : "%s is no BV, but %s (%s)".formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
     return new CVC5BitvectorFormula(pTerm);
   }
 
   @Override
   protected FloatingPointFormula encapsulateFloatingPoint(Term pTerm) {
     assert getFormulaType(pTerm).isFloatingPointType()
-        : String.format("%s is no FP, but %s (%s)", pTerm, pTerm.getSort(), getFormulaType(pTerm));
+        : "%s is no FP, but %s (%s)".formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
     return new CVC5FloatingPointFormula(pTerm);
+  }
+
+  @Override
+  protected FloatingPointRoundingModeFormula encapsulateRoundingMode(Term pTerm) {
+    assert getFormulaType(pTerm).isFloatingPointRoundingModeType()
+        : "%s is no FP rounding mode, but %s (%s)"
+            .formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
+    return new CVC5FloatingPointRoundingModeFormula(pTerm);
   }
 
   @Override
@@ -327,16 +340,14 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
   protected <TI extends Formula, TE extends Formula> ArrayFormula<TI, TE> encapsulateArray(
       Term pTerm, FormulaType<TI> pIndexType, FormulaType<TE> pElementType) {
     assert getFormulaType(pTerm).equals(FormulaType.getArrayType(pIndexType, pElementType))
-        : String.format(
-            "%s is no array, but %s (%s)", pTerm, pTerm.getSort(), getFormulaType(pTerm));
+        : "%s is no array, but %s (%s)".formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
     return new CVC5ArrayFormula<>(pTerm, pIndexType, pElementType);
   }
 
   @Override
   protected StringFormula encapsulateString(Term pTerm) {
     assert getFormulaType(pTerm).isStringType()
-        : String.format(
-            "%s is no String, but %s (%s)", pTerm, pTerm.getSort(), getFormulaType(pTerm));
+        : "%s is no String, but %s (%s)".formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
     return new CVC5StringFormula(pTerm);
   }
 
@@ -352,7 +363,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
     return new CVC5EnumerationFormula(pTerm);
   }
 
-  private String getName(Term e) {
+  String getName(Term e) {
     checkState(!e.isNull());
     String repr = e.toString();
     try {
@@ -368,14 +379,15 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
       // Some function
       // Functions are packaged like this: (functionName arg1 arg2 ...)
       // But can use |(name)| to enable () inside of the variable name
-      // TODO what happens for function names containing whitepsace?
-      String dequoted = dequote(repr);
+      // TODO what happens for function names containing whitespace?
+      String dequoted = Tokenizer.dequote(repr);
       return Iterables.get(Splitter.on(' ').split(dequoted.substring(1)), 0);
     } else {
-      return dequote(repr);
+      return Tokenizer.dequote(repr);
     }
   }
 
+  @SuppressWarnings("deprecation")
   @Override
   public <R> R visit(FormulaVisitor<R> visitor, Formula formula, final Term f) {
     checkState(!f.isNull());
@@ -405,7 +417,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
         return visitor.visitConstant(formula, convertFloatingPoint(f));
 
       } else if (f.isRoundingModeValue()) {
-        return visitor.visitConstant(formula, f.getRoundingModeValue());
+        return visitor.visitConstant(formula, getRoundingMode(f));
 
       } else if (f.isConstArray()) {
         Term constant = f.getConstArrayBase();
@@ -423,7 +435,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
         // BOUND vars are used for all vars that are bound to a quantifier in CVC5.
         // We resubstitute them back to the original free.
         // CVC5 doesn't give you the de-brujin index
-        Term originalVar = accessVariablesCache(formula.toString(), sort);
+        Term originalVar = getFreeVariableFromCache(formula.toString(), sort, visitor);
         return visitor.visitBoundVariable(encapsulate(originalVar), 0);
 
       } else if (f.getKind() == Kind.FORALL || f.getKind() == Kind.EXISTS) {
@@ -433,7 +445,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
         List<Formula> freeVars = new ArrayList<>();
         for (Term boundVar : f.getChild(0)) { // unpack grand-children of f.
           String name = getName(boundVar);
-          Term freeVar = Preconditions.checkNotNull(accessVariablesCache(name, boundVar.getSort()));
+          Term freeVar = getFreeVariableFromCache(name, boundVar.getSort(), visitor);
           body = body.substitute(boundVar, freeVar);
           freeVars.add(encapsulate(freeVar));
         }
@@ -442,10 +454,10 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
         return visitor.visitQuantifier((BooleanFormula) formula, quant, freeVars, fBody);
 
       } else if (f.getKind() == Kind.CONSTANT) {
-        return visitor.visitFreeVariable(formula, dequote(f.toString()));
+        return visitor.visitFreeVariable(formula, Tokenizer.dequote(f.toString()));
 
       } else if (f.getKind() == Kind.APPLY_CONSTRUCTOR) {
-        Preconditions.checkState(
+        checkState(
             f.getNumChildren() == 1, "Unexpected formula '%s' with sort '%s'", f, f.getSort());
         return visitor.visitConstant(formula, f.getChild(0).getSymbol());
 
@@ -539,6 +551,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
           .put(Kind.XOR, FunctionDeclarationKind.XOR)
           .put(Kind.ITE, FunctionDeclarationKind.ITE)
           .put(Kind.APPLY_UF, FunctionDeclarationKind.UF)
+          .put(Kind.NEG, FunctionDeclarationKind.UMINUS)
           .put(Kind.ADD, FunctionDeclarationKind.ADD)
           .put(Kind.MULT, FunctionDeclarationKind.MUL)
           .put(Kind.SUB, FunctionDeclarationKind.SUB)
@@ -549,6 +562,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
           .put(Kind.LEQ, FunctionDeclarationKind.LTE)
           .put(Kind.GT, FunctionDeclarationKind.GT)
           .put(Kind.GEQ, FunctionDeclarationKind.GTE)
+          .put(Kind.INT_TO_BITVECTOR, FunctionDeclarationKind.INT_TO_BV)
           // Bitvector theory
           .put(Kind.BITVECTOR_ADD, FunctionDeclarationKind.BV_ADD)
           .put(Kind.BITVECTOR_SUB, FunctionDeclarationKind.BV_SUB)
@@ -580,9 +594,11 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
           .put(Kind.BITVECTOR_LSHR, FunctionDeclarationKind.BV_LSHR)
           .put(Kind.BITVECTOR_ROTATE_LEFT, FunctionDeclarationKind.BV_ROTATE_LEFT_BY_INT)
           .put(Kind.BITVECTOR_ROTATE_RIGHT, FunctionDeclarationKind.BV_ROTATE_RIGHT_BY_INT)
-          // Floating-point theory
           .put(Kind.TO_INTEGER, FunctionDeclarationKind.FLOOR)
           .put(Kind.TO_REAL, FunctionDeclarationKind.TO_REAL)
+          .put(Kind.BITVECTOR_SBV_TO_INT, FunctionDeclarationKind.SBV_TO_INT)
+          .put(Kind.BITVECTOR_UBV_TO_INT, FunctionDeclarationKind.UBV_TO_INT)
+          // Floating-point theory
           .put(Kind.FLOATINGPOINT_TO_SBV, FunctionDeclarationKind.FP_CASTTO_SBV)
           .put(Kind.FLOATINGPOINT_TO_UBV, FunctionDeclarationKind.FP_CASTTO_UBV)
           .put(Kind.FLOATINGPOINT_TO_FP_FROM_FP, FunctionDeclarationKind.FP_CASTTO_FP)
@@ -630,6 +646,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
           .put(Kind.STRING_FROM_CODE, FunctionDeclarationKind.STR_FROM_CODE)
           .put(Kind.STRING_LT, FunctionDeclarationKind.STR_LT)
           .put(Kind.STRING_LEQ, FunctionDeclarationKind.STR_LE)
+          .put(Kind.REGEXP_NONE, FunctionDeclarationKind.RE_NONE)
           .put(Kind.REGEXP_PLUS, FunctionDeclarationKind.RE_PLUS)
           .put(Kind.REGEXP_STAR, FunctionDeclarationKind.RE_STAR)
           .put(Kind.REGEXP_OPT, FunctionDeclarationKind.RE_OPTIONAL)
@@ -642,6 +659,12 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
           .put(Kind.SELECT, FunctionDeclarationKind.SELECT)
           .put(Kind.STORE, FunctionDeclarationKind.STORE)
           .put(Kind.CONST_ARRAY, FunctionDeclarationKind.CONST)
+          // Separation logic
+          .put(Kind.SEP_EMP, FunctionDeclarationKind.SEP_EMP)
+          .put(Kind.SEP_NIL, FunctionDeclarationKind.SEP_NIL)
+          .put(Kind.SEP_PTO, FunctionDeclarationKind.SEP_PTO)
+          .put(Kind.SEP_STAR, FunctionDeclarationKind.SEP_STAR)
+          .put(Kind.SEP_WAND, FunctionDeclarationKind.SEP_WAND)
           .build();
 
   private FunctionDeclarationKind getDeclarationKind(Term f) {
@@ -692,7 +715,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
 
       if (pDeclaration.hasOp()) {
         Op op = pDeclaration.getOp();
-        return solver.mkTerm(op, pArgs.toArray(new Term[] {}));
+        return termManager.mkTerm(op, pArgs.toArray(new Term[] {}));
       } else {
         try {
           Sort[] paramSorts = pDeclaration.getSort().getFunctionDomainSorts();
@@ -703,7 +726,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
             kind = Kind.APPLY_UF;
             args.add(0, pDeclaration);
           }
-          return solver.mkTerm(kind, args.toArray(new Term[] {}));
+          return termManager.mkTerm(kind, args.toArray(new Term[] {}));
         } catch (CVC5ApiException e) {
           throw new IllegalArgumentException(
               "Failure when building the UF '"
@@ -737,7 +760,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
 
   private Term castToParamTypeIfRequired(Term input, @Nullable Sort targetSort) {
     if (input.getSort().isInteger() && targetSort.isReal()) {
-      return solver.mkTerm(Kind.TO_REAL, input);
+      return termManager.mkTerm(Kind.TO_REAL, input);
     }
     return input;
   }
@@ -757,39 +780,36 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
 
   @Override
   public Term declareUFImpl(String pName, Sort pReturnType, List<Sort> pArgTypes) {
+    if (pArgTypes.isEmpty()) {
+      // Ufs in CVC5 can't have 0 arity. We just use a variable as a workaround.
+      return makeVariable(pReturnType, pName);
+    }
     checkSymbol(pName);
 
     Term exp = functionsCache.get(pName);
 
     if (exp == null) {
-      // Ufs in CVC5 can't have 0 arity. We just use a variable as a workaround.
-      Sort sort =
-          pArgTypes.isEmpty()
-              ? pReturnType
-              : solver.mkFunctionSort(pArgTypes.toArray(new Sort[0]), pReturnType);
-      exp = solver.mkConst(sort, pName);
+      Sort sort = termManager.mkFunctionSort(pArgTypes.toArray(new Sort[0]), pReturnType);
+      exp = termManager.mkConst(sort, pName);
       functionsCache.put(pName, exp);
 
     } else {
+      var cachedDomain = exp.getSort().getFunctionDomainSorts();
+      var cachedRange = exp.getSort().getFunctionCodomainSort();
       Preconditions.checkArgument(
-          exp.getSort().equals(exp.getSort()),
-          "Symbol %s already in use for different return type %s",
-          exp,
-          exp.getSort());
-      for (int i = 1; i < exp.getNumChildren(); i++) {
-        // CVC5s first argument in a function/Uf is the declaration, we don't need that here
-        try {
-          Preconditions.checkArgument(
-              pArgTypes.get(i).equals(exp.getChild(i).getSort()),
-              "Argument %s with type %s does not match expected type %s",
-              i - 1,
-              pArgTypes.get(i),
-              exp.getChild(i).getSort());
-        } catch (CVC5ApiException e) {
-          throw new IllegalArgumentException(
-              "Failure visiting the Term '" + exp + "' at index " + i + ".", e);
-        }
+          pArgTypes.size() == cachedDomain.length,
+          "Function %s already defined with a different number of arguments",
+          pName);
+      for (int i = 0; i < cachedDomain.length; i++) {
+        checkArgument(
+            cachedDomain[i].equals(pArgTypes.get(i)),
+            "Function %s already defined with different types",
+            pName);
       }
+      Preconditions.checkArgument(
+          pReturnType.equals(cachedRange),
+          "Function %s already defined with different types",
+          pName);
     }
     return exp;
   }
@@ -799,7 +819,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
     final Sort type = expForType.getSort();
     final Sort valueType = value.getSort();
 
-    // Variables are Kind.CONSTANT and can't be check with isIntegerValue() or getIntegerValue()
+    // Variables are Kind.CONSTANT and can't be checked with isIntegerValue() or getIntegerValue()
     // etc. but only with solver.getValue() and its String serialization
     try {
       if (value.getKind() == Kind.VARIABLE) {
@@ -822,6 +842,9 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
       } else if (value.isFloatingPointValue()) {
         return convertFloatingPoint(value);
 
+      } else if (value.isRoundingModeValue()) {
+        return getRoundingMode(value);
+
       } else if (value.isBooleanValue()) {
         return value.getBooleanValue();
 
@@ -834,9 +857,8 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
       }
     } catch (CVC5ApiException e) {
       throw new IllegalArgumentException(
-          String.format(
-              "Failure trying to convert constant %s with type %s to type %s.",
-              value, valueType, type),
+          "Failure trying to convert constant %s with type %s to type %s."
+              .formatted(value, valueType, type),
           e);
     }
   }
@@ -844,34 +866,131 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, Solver, Term>
   private FloatingPointNumber convertFloatingPoint(Term value) throws CVC5ApiException {
     final var fpValue = value.getFloatingPointValue();
     final var expWidth = Ints.checkedCast(fpValue.first);
-    final var mantWidth = Ints.checkedCast(fpValue.second - 1); // without sign bit
+    final var mantWidth = Ints.checkedCast(fpValue.second); // with hidden bit
     final var bvValue = fpValue.third;
-    Preconditions.checkState(bvValue.isBitVectorValue());
+    checkState(bvValue.isBitVectorValue());
     final var bits = bvValue.getBitVectorValue();
-    return FloatingPointNumber.of(bits, expWidth, mantWidth);
+    return FloatingPointNumber.of(
+        bits, getFloatingPointTypeFromSizesWithHiddenBit(expWidth, mantWidth));
   }
 
-  private Term accessVariablesCache(String name, Sort sort) {
-    Term existingVar = variablesCache.get(name, sort.toString());
-    if (existingVar == null) {
+  @Override
+  public FloatingPointRoundingMode getRoundingMode(Term pTerm) {
+    checkArgument(pTerm.isRoundingModeValue(), "Term '%s' is not a rounding mode.", pTerm);
+    try {
+      return switch (pTerm.getRoundingModeValue()) {
+        case ROUND_NEAREST_TIES_TO_AWAY -> FloatingPointRoundingMode.NEAREST_TIES_AWAY;
+        case ROUND_NEAREST_TIES_TO_EVEN -> FloatingPointRoundingMode.NEAREST_TIES_TO_EVEN;
+        case ROUND_TOWARD_NEGATIVE -> FloatingPointRoundingMode.TOWARD_NEGATIVE;
+        case ROUND_TOWARD_POSITIVE -> FloatingPointRoundingMode.TOWARD_POSITIVE;
+        case ROUND_TOWARD_ZERO -> FloatingPointRoundingMode.TOWARD_ZERO;
+      };
+    } catch (CVC5ApiException e) {
       throw new IllegalArgumentException(
-          "Symbol "
-              + name
-              + " requested with type "
-              + sort
-              + ", but "
-              + "already "
-              + "used "
-              + "with "
-              + "type"
-              + variablesCache
-                  .rowMap()
-                  .get(name)
-                  .entrySet()
-                  .toArray((java.util.Map.Entry[]) Array.newInstance(java.util.Map.Entry.class, 0))[
-                  0]
-                  .getKey());
+          "Failure trying to get the rounding mode of Term '%s'.".formatted(pTerm), e);
     }
-    return existingVar;
+  }
+
+  /**
+   * Returns the free variable for the given name and sort of a bound variable from the variables
+   * cache. Will throw a {@link NullPointerException} if no variable is known for the input!
+   */
+  private Term getFreeVariableFromCache(String name, Sort sort, FormulaVisitor<?> visitor) {
+    if (visitor instanceof BoundVariablesRegisteringRecursiveVisitor registeringVisitor) {
+      registeringVisitor.registerBoundVariable(name, sort);
+    }
+    Term existingVar = variablesCache.get(name, sort.toString());
+    return checkNotNull(
+        existingVar,
+        "Symbol %s requested with type %s, but %s",
+        name,
+        sort,
+        variablesCache.containsRow(name)
+            ? "the used symbol is already registered with type " + variablesCache.row(name).keySet()
+            : "the used symbol is unknown to the variables cache");
+  }
+
+  /**
+   * Caches all bound variables nested in the boolean input term that are unknown to the variable
+   * cache with a free variable copy in it.
+   */
+  protected void registerBoundVariablesWithVisitor(Term input) {
+    checkArgument(
+        input.getSort().isBoolean(),
+        "Only boolean terms can be used to register " + "bound variables as free variables!");
+
+    BoundVariablesRegisteringRecursiveVisitor boundVariablesRegisteringRecursiveVisitor =
+        new BoundVariablesRegisteringRecursiveVisitor(this);
+
+    boundVariablesRegisteringRecursiveVisitor.addToQueue(encapsulateBoolean(input));
+    while (!boundVariablesRegisteringRecursiveVisitor.isQueueEmpty()) {
+      Formula tt = boundVariablesRegisteringRecursiveVisitor.pop();
+      TraversalProcess process = visit(tt, boundVariablesRegisteringRecursiveVisitor);
+      if (process == TraversalProcess.ABORT) {
+        return;
+      }
+    }
+  }
+
+  private static final class BoundVariablesRegisteringRecursiveVisitor
+      implements FormulaVisitor<TraversalProcess> {
+
+    private final Set<Formula> seen = new HashSet<>();
+    private final Deque<Formula> toVisit = new ArrayDeque<>();
+
+    private final CVC5FormulaCreator usedCreator;
+
+    BoundVariablesRegisteringRecursiveVisitor(CVC5FormulaCreator pCreator) {
+      usedCreator = checkNotNull(pCreator);
+    }
+
+    private void registerBoundVariable(String boundVariableName, Sort boundVarSort) {
+      String boundSort = boundVarSort.toString();
+      Term existingVar = usedCreator.variablesCache.get(boundVariableName, boundSort);
+      if (existingVar == null) {
+        existingVar = usedCreator.makeVariable(boundVarSort, boundVariableName);
+        usedCreator.variablesCache.put(boundVariableName, boundSort, existingVar);
+      }
+    }
+
+    void addToQueue(Formula f) {
+      if (seen.add(f)) {
+        toVisit.push(f);
+      }
+    }
+
+    boolean isQueueEmpty() {
+      return toVisit.isEmpty();
+    }
+
+    Formula pop() {
+      return toVisit.pop();
+    }
+
+    @Override
+    public TraversalProcess visitFreeVariable(Formula pF, String pName) {
+      return TraversalProcess.CONTINUE;
+    }
+
+    @Override
+    public TraversalProcess visitConstant(Formula pF, Object pValue) {
+      return TraversalProcess.CONTINUE;
+    }
+
+    @Override
+    public TraversalProcess visitFunction(
+        Formula pF, List<Formula> pArgs, FunctionDeclaration<?> pFunctionDeclaration) {
+      for (Formula f : pArgs) {
+        addToQueue(f);
+      }
+      return TraversalProcess.CONTINUE;
+    }
+
+    @Override
+    public TraversalProcess visitQuantifier(
+        BooleanFormula pF, Quantifier pQuantifier, List<Formula> boundVars, BooleanFormula pBody) {
+      addToQueue(pBody);
+      return TraversalProcess.CONTINUE;
+    }
   }
 }
