@@ -71,20 +71,19 @@ abstract class Z3AbstractProver extends AbstractProverWithAllSat<Void> {
 
   void addParameter(long z3params, String key, Object value) {
     long keySymbol = Native.mkStringSymbol(z3context, key);
-    if (value instanceof Boolean) {
-      Native.paramsSetBool(z3context, z3params, keySymbol, (Boolean) value);
-    } else if (value instanceof Integer) {
-      Native.paramsSetUint(z3context, z3params, keySymbol, (Integer) value);
-    } else if (value instanceof Double) {
-      Native.paramsSetDouble(z3context, z3params, keySymbol, (Double) value);
-    } else if (value instanceof String) {
-      long valueSymbol = Native.mkStringSymbol(z3context, (String) value);
+    if (value instanceof Boolean b) {
+      Native.paramsSetBool(z3context, z3params, keySymbol, b);
+    } else if (value instanceof Integer i) {
+      Native.paramsSetUint(z3context, z3params, keySymbol, i);
+    } else if (value instanceof Double d) {
+      Native.paramsSetDouble(z3context, z3params, keySymbol, d);
+    } else if (value instanceof String string) {
+      long valueSymbol = Native.mkStringSymbol(z3context, string);
       Native.paramsSetSymbol(z3context, z3params, keySymbol, valueSymbol);
     } else {
       throw new IllegalArgumentException(
-          String.format(
-              "unexpected type '%s' with value '%s' for parameter '%s'",
-              value.getClass(), value, key));
+          "unexpected type '%s' with value '%s' for parameter '%s'"
+              .formatted(value.getClass(), value, key));
     }
   }
 
@@ -102,10 +101,14 @@ abstract class Z3AbstractProver extends AbstractProverWithAllSat<Void> {
     }
   }
 
+  @Override
+  protected boolean hasPersistentModel() {
+    return true;
+  }
+
   @SuppressWarnings("resource")
   @Override
   public Model getModel() throws SolverException {
-    Preconditions.checkState(!closed);
     checkGenerateModels();
     return new CachingModel(getEvaluatorWithoutChecks());
   }
@@ -127,7 +130,7 @@ abstract class Z3AbstractProver extends AbstractProverWithAllSat<Void> {
     long e = creator.extractInfo(f);
     try {
       if (storedConstraints != null) { // Unsat core generation is on.
-        String varName = String.format("Z3_UNSAT_CORE_%d", trackId.getFreshId());
+        String varName = "Z3_UNSAT_CORE_%d".formatted(trackId.getFreshId());
         BooleanFormula t = mgr.getBooleanFormulaManager().makeVariable(varName);
         assertContraintAndTrack(e, creator.extractInfo(t));
         storedConstraints.push(storedConstraints.pop().putAndCopy(varName, f));
@@ -158,7 +161,6 @@ abstract class Z3AbstractProver extends AbstractProverWithAllSat<Void> {
 
   @Override
   public List<BooleanFormula> getUnsatCore() {
-    Preconditions.checkState(!closed);
     checkGenerateUnsatCores();
     if (storedConstraints == null) {
       throw new UnsupportedOperationException(
@@ -216,9 +218,8 @@ abstract class Z3AbstractProver extends AbstractProverWithAllSat<Void> {
         builder.put(key, Double.toString(Native.statsGetDoubleValue(z3context, stats, i)));
       } else {
         throw new IllegalStateException(
-            String.format(
-                "Unknown data entry value for key %s at position %d in statistics '%s'",
-                key, i, Native.statsToString(z3context, stats)));
+            "Unknown data entry value for key %s at position %d in statistics '%s'"
+                .formatted(key, i, Native.statsToString(z3context, stats)));
       }
     }
 
